# Reward-Model-Adversarial-Attacks

./: README.md  pyproject.toml
notebooks/: README.md
notebooks/stable-diffusion-2-1-base/01_generate_images/: Generate-Images-Drawbench.ipynb  Generate-Images-HPS.ipynb
notebooks/stable-diffusion-2-1-base/02_run_attack/: Run-Attack-HPSv1-Drawbench.ipynb  Run-Attack-HPSv1-HPSBench.ipynb  Run-Attack-HPSv2-Drawbench.ipynb  Run-Attack-HPSv2-HPSBench.ipynb
notebooks/stable-diffusion-2-1-base/03_run_transfer_test/: Transfer-Test-HPSv1-HPSBench.ipynb  Transfer-Test-HPSv2-HPSBench.ipynb
notebooks/stable-diffusion-3-medium-diffusers/01_generate_images/: Generate-Images-Drawbench.ipynb  Generate-Images-HPS.ipynb
src/: README.md  args.py  generate_images.py  run_attack.py  run_transfer_test.py  utils.py
src/attacks/: README.md  attack_factory.py  base_attack.py
src/attacks/black_box/: gn_reward_model.py  (+1 more)
src/datasets/: README.md  base_prompt_dataset.py  dataset_factory.py  drawbench_dataset.py  error.py  hpsv2_benchmark_dataset.py  image_prompt_dataset.py  round_robin_sampler.py
src/models/: README.md  base_diffusion_model.py  base_model.py  error.py  flux_model.py  hps_v1_model.py  hps_v2_model.py  model_factory.py  stable_diffusion_model.py  vq_diffusion_model.py
tests/: Test-HPS-v1.ipynb  Test-Stable-Diffusion.ipynb  Test-Stable-Diffusion2.ipynb  Test_HPS_v1.ipynb
tests/datasets/: Test-DrawBench.ipynb  Test-HPSv2-Benchmark.ipynb
tests/models/: Test-CLIP-Preprocess-Function.ipynb  Test-Flux-(Failed).ipynb  Test-HPS-v2.ipynb  Test-VQ-Diffusion-(Failed).ipynb
(+16 files in other folders)
