[tool.poetry]
name = "reward-model-adversarial-attacks"
version = "0.1.0"
description = ""
authors = ["AAnirudh07 <anirudh19015@cse.ssn.edu.in>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

# HPS dependencies
ftfy = "^6.3.1"
tqdm = "^4.67.1"
regex = "^2024.11.6"
clip = { git = "https://github.com/openai/CLIP", branch = "main" }

torchattacks = "3.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
